<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="8dp"
    app:cardCornerRadius="15dp"
    android:layout_marginHorizontal="10dp"
    android:background="@color/blue">

    <LinearLayout
        android:background="@null"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/popup_crypto_name"
            tools:text="Enter price for Bitcoin"
            android:paddingVertical="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/popup_crypto_buy_price"
            android:hint="@string/buy_value"
            android:layout_marginTop="10dp"
            app:prefixText="@string/inr_symbol"
            app:errorEnabled="true"
            app:passwordToggleEnabled="false"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:includeFontPadding="false"
                android:fontFamily="@font/urbanist_regular"
                android:textSize="18sp"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/popup_done"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:text="@string/done_text"
            style="@style/MyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>