<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="15dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.9"
                    android:fontFamily="@font/urbanist_bold"
                    android:paddingVertical="4dp"
                    android:textSize="20sp"
                    tools:text="Random Name" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.6"
                    android:fontFamily="@font/urbanist_medium"
                    android:paddingVertical="4dp"
                    tools:text="abc@example.com" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="1dp"
                    android:alpha="0.1"
                    android:background="@color/text_color" />

                <TextView
                    android:id="@+id/mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.6"
                    android:fontFamily="@font/urbanist_medium"
                    android:paddingVertical="12dp"
                    tools:text="+91 0123456789" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/urbanist_semibold"
                    android:paddingVertical="10dp"
                    android:text="@string/settings_text"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/api_layout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:hint="@string/api_key_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/api_input_frag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/urbanist_regular"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword|textMultiLine"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/secret_layout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:hint="@string/secret_key_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/secret_input_frag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/urbanist_regular"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword|textMultiLine"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/done_btn_frag"
                    style="@style/MyButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp"
                    android:background="@drawable/round_button"
                    android:fontFamily="@font/urbanist_bold"
                    android:minHeight="60dp"
                    android:text="@string/done_text" />

                <TextView
                    android:layout_marginBottom="8dp"
                    android:autoLink="all"
                    android:textSize="12sp"
                    android:textColorLink="@color/orange"
                    android:text="@string/link_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</FrameLayout>