<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:cardElevation="0dp"
    android:background="@color/white"
    android:layout_marginVertical="5dp">

    <LinearLayout
        android:paddingHorizontal="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/img_desc"
            android:layerType="software"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:src="@drawable/settings" />


        <TextView
            android:id="@+id/crypto_name"
            android:layout_marginTop="11dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/symbol"
            android:textSize="16sp"
            tools:text="BTCUSDT" />


        <TextView
            android:id="@+id/quantity"
            android:alpha="0.6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/crypto_name"
            android:layout_alignStart="@id/current_price"
            android:layout_marginVertical="6dp"
            android:fontFamily="@font/urbanist_medium"
            android:textSize="14sp"
            tools:text="Qty: 2" />

        <TextView
            android:id="@+id/current_price"
            android:alpha="0.6"
            android:fontFamily="@font/urbanist_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantity"
            android:layout_toEndOf="@id/symbol"
            android:textSize="14sp"
            tools:text="$150" />


        <TextView
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/clip_bounds_textview"
            android:fontFamily="@font/urbanist_semibold"
            android:padding="8dp"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:backgroundTint="@color/green_10"
            tools:drawableLeft="@drawable/arrow_upward"
            tools:text="+50.0%"
            tools:textColor="@color/green" />
    </RelativeLayout>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="10dp"
        android:alpha="0.1"
        android:background="@color/text_color" />

        <RelativeLayout
            android:paddingHorizontal="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/urbanist_bold"
                    android:text="@string/buy_price"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/buy_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/urbanist_medium"
                    android:textSize="12sp"
                    tools:text="$100" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/urbanist_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/buy_total"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/buy_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/urbanist_medium"
                    android:textSize="12sp"
                    tools:text="$200" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/current_total"
                    android:fontFamily="@font/urbanist_bold"
                    android:textSize="11sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/current_total"
                    android:textColor="@color/blue"
                    android:fontFamily="@font/urbanist_bold"
                    android:textSize="12sp"
                    tools:text="$300"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


        </RelativeLayout>
        <View
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.1"
            android:background="@color/text_color" />
        <Button
            android:id="@+id/edit_buy_price"
            android:text="@string/edit"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textAllCaps="false"
            android:fontFamily="@font/urbanist_semibold"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>