<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.PortfolioFragment"
    android:paddingHorizontal="10dp">

    <TextView
        android:id="@+id/error_text"
        android:visibility="gone"
        android:text="@string/error_text"
        android:fontFamily="@font/urbanist_semibold"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/portfolio_total_layout"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/all_buy_total_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buy_total" />
                    <TextView
                        android:id="@+id/all_buy_total"
                        tools:text="$200"
                        android:ellipsize="end"
                        android:textColor="@color/blue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/portfolio_total_text"
                        android:text="@string/portfolio_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/portfolio_total"
                        tools:text="$400"
                        android:textColor="@color/blue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/total_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/clip_bounds_textview"
                    android:fontFamily="@font/urbanist_semibold"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:backgroundTint="@color/green_10"
                    tools:drawableLeft="@drawable/arrow_upward"
                    tools:text="+100.0%"
                    tools:textColor="@color/green" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/portfolio_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/portfolio_total_layout"
            tools:listitem="@layout/portfolio_item_layout" />


</RelativeLayout>